--- a/Index.htm
+++ b/Index.htm
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Anime Friend</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+</head>
 
-  <body>
+<body>
     <nav id="navbar">
-      <div id="logo">
-        <img src="img/otaku.png" alt="AnimeShowcase.com">
-      </div>
-      <ul>
-        <li class="item"><a href="#">Home</a></li>
-        <li class="item"><a href="#">Top 10</a></li>
-        <li class="item"><a href="#">Pick Your Sauce</a></li>
-        <li class="item"><a href="#">Contatc US</a></li>
-      </ul>
+        <div id="logo">
+            <img src="img/otaku.png" alt="AnimeShowcase.com">
+        </div>
+        <ul>
+            <li class="item"><a href="#">Home</a></li>
+            <li class="item"><a href="#">Top 10</a></li>
+            <li class="item"><a href="#">Pick Your Sauce</a></li>
+            <li class="item"><a href="#">Contatc US</a></li>
+        </ul>
     </nav>
 
     <section id="home">
-      <h1 class="h-primary">Your anime Guide</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corrupti quasi at distinctio tempora
-        recusandae esse rerum accusamus quidem dolores rem consequatur mollitia qui facilis, explicabo nam. Fuga enim
-        animi tenetur. Facere?</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio labore voluptatem aperiam hic sapiente
-        doloremque perferendis, vitae quod, recusandae autem ea magni, perspiciatis ratione ullam. Assumenda cupiditate,
-        modi at quis voluptatem aperiam.</p>
-      <button class="btn">Top 10 anime</button>
+        <h1 class="h-primary">Your anime Guide</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corrupti quasi at distinctio tempora recusandae esse rerum accusamus quidem dolores rem consequatur mollitia qui facilis, explicabo nam. Fuga enim animi tenetur. Facere?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio labore voluptatem aperiam hic sapiente doloremque perferendis, vitae quod, recusandae autem ea magni, perspiciatis ratione ullam. Assumenda cupiditate, modi at quis voluptatem
+            aperiam.</p>
+        <button class="btn">Top 10 anime</button>
     </section>
-  </body>
+</body>
 
 </html>
