--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Anime Friend</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-    <nav id="navbar">
-        <div id="logo">
-            <img src="img/otaku.png" alt="AnimeShowcase.com">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Your Food partner</title>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header>
+      <nav id="navbar">
+        <div class="logo">
+          <img src="img/otaku.png" alt="Foodonline" />
         </div>
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">Top 10</a></li>
-            <li class="item"><a href="#">Pick Your Sauce</a></li>
-            <li class="item"><a href="#">Contatc US</a></li>
+          <li class="item"><a href="#">Home</a></li>
+          <li class="item"><a href="#">Services</a></li>
+          <li class="item"><a href="#">About US</a></li>
+          <li class="item"><a href="#">Contact Us</a></li>
         </ul>
-    </nav>
-
+      </nav>
+    </header>
     <section id="home">
-        <h1 class="h-primary">Your anime Guide</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, corrupti quasi at distinctio tempora recusandae esse rerum accusamus quidem dolores rem consequatur mollitia qui facilis, explicabo nam. Fuga enim animi tenetur. Facere?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio labore voluptatem aperiam hic sapiente doloremque perferendis, vitae quod, recusandae autem ea magni, perspiciatis ratione ullam. Assumenda cupiditate, modi at quis voluptatem
-            aperiam.</p>
-        <button class="btn">Top 10 anime</button>
+      <h1 class="h1-primary">Lets Decide Your next Meal</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor
+        adipisci voluptatum sit distinctio ab aperiam eos quis molestias!
+        Laudantium numquam tempora, eos in corrupti fugit ullam ipsa, veritatis
+        neque iure a.
+      </p>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam laborum
+        adipisci nihil necessitatibus velit quis ut dignissimos doloremque saepe
+        deserunt? Non perspiciatis quibusdam doloribus similique quasi illo est!
+        Fuga omnis doloremque alias.
+      </p>
+      <button class="btn">Order Now</button>
     </section>
-</body>
-
+  </body>
 </html>
