--- a/index.html
+++ b/index.html
@@ -23,19 +23,103 @@
     </header>
     <section id="home">
       <h1 class="h1-primary">Lets Decide Your next Meal</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor
-        adipisci voluptatum sit distinctio ab aperiam eos quis molestias!
-        Laudantium numquam tempora, eos in corrupti fugit ullam ipsa, veritatis
-        neque iure a.
+      <p class="center">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque
+        quisquam sed excepturi sapiente nihil nobis beatae adipisci quos dolorem
+        reprehenderit aperiam, veritatis cumque fuga harum, accusantium ratione
+        quam quis recusandae unde libero.
       </p>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam laborum
-        adipisci nihil necessitatibus velit quis ut dignissimos doloremque saepe
-        deserunt? Non perspiciatis quibusdam doloribus similique quasi illo est!
-        Fuga omnis doloremque alias.
+      <p class="center">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima nulla
+        quibusdam et harum, quis iure ipsam voluptate ducimus in impedit
+        sapiente, quidem quisquam recusandae aspernatur provident rerum nostrum,
+        illum nisi pariatur? Nihil.
       </p>
       <button class="btn">Order Now</button>
     </section>
+
+    <section class="services-container">
+      <h1 class="h1-primary center">Our Services</h1>
+      <div id="services">
+        <div class="box">
+          <img src="Img/1.png" alt="" />
+          <h2 class="h-secondary center">Food Ordering</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            cupiditate rem corrupti commodi, nobis labore facere voluptatum
+            perferendis veniam sit distinctio unde facilis suscipit animi alias
+            incidunt? Sequi provident sint vero illum!
+          </p>
+        </div>
+        <div class="box">
+          <img src="Img/2.png" alt="" />
+          <h2 class="h-secondary center">Food Catering</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            cupiditate rem corrupti commodi, nobis labore facere voluptatum
+            perferendis veniam sit distinctio unde facilis suscipit animi alias
+            incidunt? Sequi provident sint vero illum!
+          </p>
+        </div>
+        <div class="box">
+          <img src="Img/3.png" alt="" />
+          <h2 class="h-secondary center">Bulk Ordering</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
+            cupiditate rem corrupti commodi, nobis labore facere voluptatum
+            perferendis veniam sit distinctio unde facilis suscipit animi alias
+            incidunt? Sequi provident sint vero illum!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="client-section">
+      <h1 class="h-primary center">Our Clients</h1>
+      <div id="clients">
+        <div class="client-items">
+          <img src="Img/logo1.png" alt="Our client" />
+        </div>
+        <div class="client-items">
+          <img src="Img/logo2.png" alt="Our client" id="micro"/>
+        </div>
+        <div class="client-items">
+          <img src="Img/logo3.png" alt="Our client" />
+        </div>
+        <div class="client-items">
+          <img src="Img/logo4.png" alt="Our client" />
+        </div>
+      </div>
+    </section>
+
+    <section id="contact">
+      <h1 class="h-primary center">Contact Us</h1>
+      <div id="contact-box">
+          <form action="">
+              <div class="form-group">
+                  <label for="name">Name: </label>
+                  <input type="text" name="name" id="name" placeholder="Enter your name">
+              </div>
+              <div class="form-group">
+                  <label for="email">Email: </label>
+                  <input type="email" name="name" id="email" placeholder="Enter your email">
+              </div>
+              <div class="form-group">
+                  <label for="phone">Phone Number: </label>
+                  <input type="phone" name="name" id="phone" placeholder="Enter your phone">
+              </div>
+              <div class="form-group">
+                  <label for="message">Message: </label>
+                  <textarea name="message" id="message" cols="30" rows="10"></textarea>
+              </div>
+          </form>
+      </div>
+  </section>
+
+  <footer>
+    <div class="center">
+    copyright &copy; www.FoodDelivery.com. All rights reserved!
+  </div>
+  </footer>
   </body>
 </html>
